# Consultoria_Empresarial_v2

./: .pyre_configuration  .replit  Customizar stripe.md  README.md  generate_logo.cjs  implementation_plan.md  log.md  log_Railway.md  log_navegador_e_Vercel.md  logs.1777428089804.csv  logs.1777429493302.csv  logs.csv  next.config.ts  nixpacks.toml  package-lock.json  package.json  patch_tests.py  pyproject.toml  railpack.toml  railway.toml  replit.md
agents/: blackboard.py  clean_worker.py  gerar_pdfs_teste.py  marco_strategist.py  models.py  pdf_generator.py  prompts.py  pytest.ini  requirements.txt  worker.py  worker.py.bak
agents/tests/: test_avatar_integration.py  test_specialist.py  test_worker.py
attached_assets/: Pasted--message-Starting-Container-severity-info-attributes-le_1776637574965.txt  Pasted-Analise-detalhadamente-o-sistema-de-conversa-o-multi-ag_1776622220813.txt  Pasted-Download-the-React-DevTools-for-a-better-development-ex_1773867185452.txt  Pasted-Download-the-React-DevTools-for-a-better-development-ex_1773868079784.txt  Pasted-Download-the-React-DevTools-for-a-better-development-ex_1773868613678.txt  Pasted-Download-the-React-DevTools-for-a-better-development-ex_1773869908427.txt  Pasted-INFO-livekit-agents-starting-worker-message-starting-wo_1774375398144.txt  Pasted-INFO-livekit-agents-starting-worker-message-starting-wo_1776628962347.txt
public/: logs.1777418088079.csv  sw.js
src/: auth.ts
src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
src/components/: header.tsx  install-app-button.tsx  new-project-modal.tsx  providers.tsx  (+1 more)
(+36 files in other folders)
