[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "google-genai>=1.0.0",
    "google-generativeai>=0.8.0",
    "livekit>=1.1.2",
    "livekit-api>=1.1.0",
    "livekit-agents[bey]>=1.4.6",
    "livekit-plugins-bey>=1.4.0",
    "livekit-plugins-google>=1.4.6",
    "markdown>=3.5.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
    "duckduckgo-search>=6.0.0",
]
